--- a/source/desktop/html/index.html
+++ b/source/desktop/html/index.html
@@ -24,17 +24,11 @@
         <ul>
             <!-- những trang cơ bản -->
             <li><a href="./01-homepage.html">homepage</a></li>
-            <li><a href="./02-cate.html">cate</a></li>
-            <li><a href="./03-detail.html">detail</a></li>
-            <li><a href="./04-longform.html">longform</a></li>
-            <li><a href="./05-search-tags.html">search-tags</a></li>
-            <li><a href="./06-error.html">error</a></li>
-            <li><a href="./modal.html">modal</a></li>
-            <!-- những trang có hoăc không -->
-            <!-- <li><a href="./07-podcast.html">podcast</a></li> -->
-            <!-- <li><a href="./list-location.html">list location</a></li> -->
-            <li><a href="./list-epaper.html">list epaper</a></li>
-            <li><a href="./detail-epaper.html">detail epaper</a></li>
+            <li><a href="./02-sanpham.html">sanpham</a></li>
+            <li><a href="./03-news.html">news</a></li>
+            <li><a href="./04-product-detail.html">product-detail</a></li>
+            <li><a href="./05-detail.html">detail</a></li>
+            
         </ul>
 
     </div>
