--- a/source/desktop/html/05-detail.html
+++ b/source/desktop/html/05-detail.html
@@ -26,8 +26,12 @@
               @@include('../component/detail-page/article-header/article-header.html')
               @@include('../component/detail-page/article-body/article-body.html')
             </div>
+            @@include('../component/box-style/timeline/timeline.html')
           </div>
           <div class="sub-col">
+            @@include('../component/box-style/related-product/related-product.html')
+            @@include('../component/box-style/list-news/list-news.html')
+            @@include('../component/box-style/onemain-multisub/onemain-multisub.html')
             <div class="banner">
               <div class="banner_show">
                 <img
