--- a/source/desktop/html/01-homepage.html
+++ b/source/desktop/html/01-homepage.html
@@ -26,12 +26,7 @@
         <p class="item" data="chapter-five">5</p>
       </div>
 
-      <div
-        class="chapter-one"
-        style="
-          background-image: url(https://source.unsplash.com/featured/1920x1311?sig=1);
-        "
-      >
+      <div class="chapter-one">
         @@include('../component/box-style/chapter-one/chapter-one.html')
       </div>
       <div class="chapter-two">
