--- a/source/desktop/html/04-product-detail.html
+++ b/source/desktop/html/04-product-detail.html
@@ -10,6 +10,10 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../styles/css/desktop.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
   </head>
 
   <body class="product-detail">
@@ -34,6 +38,7 @@
 
     <!-- JS Global Compulsory-->
     <script src="../js/jquery-3.1.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="../js/ui.js"></script>
   </body>
 </html>
